<resources>
    <string name="app_name">countrysearch</string>
    <string name="welcome_to_country_search">Welcome To Country Search</string>
    <string name="main_enter_a_country">Enter a Country</string>
    <string name="main_button_search">Search</string>
    <string name="list_country_population">Population</string>
    <string name="list_country_flag_of_country">flag of country</string>
    <string name="main_favorite_button_description">Button to access to your favorite countries</string>
    <string name="favorite_countries_title">Your Favorite Countries</string>
    <string name="details_country_add_favorite_button">Button to addd or delete this country in your favorite list</string>
    <string name="details_country_map_description">map of the country</string>
    <string name="list_country_flag_description">Flag of a country</string>
</resources>