<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_country_search"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/guideline_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="87dp" />

    <EditText
        android:id="@+id/main_country_search_edittext"
        android:layout_width="173dp"
        android:layout_height="52dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:text="@string/main_enter_a_country"
        app:layout_constraintBottom_toTopOf="@+id/guideline_search"
        app:layout_constraintEnd_toStartOf="@+id/main_search_button"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_title" />

    <Button
        android:id="@+id/main_search_button"
        android:layout_width="106dp"
        android:layout_height="52dp"
        android:layout_marginEnd="44dp"
        android:text="@string/main_button_search"
        app:layout_constraintBottom_toTopOf="@+id/guideline_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_title"
        app:layout_constraintVertical_bias="0.512" />

    <ImageButton
        android:id="@+id/main_favorite_imagebutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/main_favorite_button_description"
        android:tint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/main_search_button"
        app:layout_constraintTop_toTopOf="@+id/guideline_title"
        app:srcCompat="@drawable/star_24"
        tools:ignore="UseAppTint" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="178dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_country_list_recyclerview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_search"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_country" />

</androidx.constraintlayout.widget.ConstraintLayout>
