<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".activity.FavoriteCountriesActivity">

    <!-- Page Title -->
    <TextView
        android:id="@+id/textView"
        style="@style/TitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/favorite_countries_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.653" />

    <!-- Favorite Image -->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:contentDescription="@string/main_favorite_button_description"
        android:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65"
        app:srcCompat="@drawable/star_24"
        tools:ignore="UseAppTint" />

    <!-- Title Guideline -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="142dp"
        app:layout_constraintGuide_percent="0.2" />

    <!-- Country List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favorite_countries_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        tools:listitem="@layout/list_country" />

    <!-- Refresh Button -->
    <ImageButton
        android:id="@+id/favorite_countries_refresh_imagebutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/violet"
        android:contentDescription="@string/details_country_add_favorite_button"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sync_fill0_24"
        tools:ignore="UseAppTint" />

    <!-- Home Button -->
    <ImageButton
        android:id="@+id/favorite_countries_home_imagebutton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/round_button"
        android:backgroundTint="@color/violet"
        android:contentDescription="@string/details_country_add_favorite_button"
        android:tint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/favorite_countries_refresh_imagebutton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home_fill0_24"
        tools:ignore="UseAppTint" />

</androidx.constraintlayout.widget.ConstraintLayout>